# FairnessPipeline-BankMarketing

./: .gitignore  Makefile  README.md  app.py  cookiecutter.json  pyproject.toml  requirements.txt  run_all.bat  setup.cfg  setup.py
data/processed/: X_test.pkl  X_train.pkl  create_df.ipynb  data.pkl  load_data.py  outliers_report.csv  preprocess_1.ipynb  preprocess_split.ipynb  y_test.pkl  y_train.pkl
data/raw/: import_data.py  load_data.py  raw_df.csv  raw_df.pkl  raw_df.py
docs/docs/: getting-started.md  index.md
fairnesspipeline-bankmarketing/: Makefile  README.md  requirements.txt
fairnesspipeline-bankmarketing/docs/: mkdocs.yml
fairnesspipeline-bankmarketing/docs/docs/: index.md
fairnesspipeline-bankmarketing/fairnesspipeline_bankmarketing/: dataset.py  features.py
fairnesspipeline-bankmarketing/fairnesspipeline_bankmarketing/modeling/: predict.py  train.py
modeling/: __init__.py  config.py  database.py  dataset.py  features.py  plots.py  predict.py  sanity_checks.py  train.py
models/: XGB_Model.json
notebooks/: fairness_analysis.ipynb  original_notebook.ipynb
reports/figures/: tree.txt
static/: styles.css
templates/: form.html
