[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fairnesspipeline_bankmarketing"
version = "0.0.1"
description = "End to end mlops pipeline flow for a banking marketing campaign."
authors = [
  { name = "MLops SuperTeam" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["fairnesspipeline_bankmarketing"]
force_sort_within_sections = true
